Completed basic auth implementation. Re-organize frontend
